daemonset-definition.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-def
spec:
  selector:
    matchLabels:
      app: monitoring
  template:
    metadata:
      labels:
        app: monitoring
    spec:
      containers:
      - name: monitoring-agent
        image: monitoring-agent
