elastic-stack.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elastic-search
spec:
  containers:
  - env:
    - name: discovery.type
      value: single-node
    image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
    name: elastic-search
    ports:
    - containerPort: 9200
      protocol: TCP
    - containerPort: 9300
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: kibana
spec:
  containers:
  - env:
    - name: ELASTICSEARCH_URL
      value: http://elasticsearch:9200
    image: kibana:6.4.2
    name: kibana
    ports:
    - containerPort: 5601
      protocol: TCP
