node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bee
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: color
            operator: In
            values:
            - blue
  containers:
    image: nginx
