pod-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bee
spec:
  tolerations:
  - key: spray
    value: mortein
    effect: NoSchedule
    operator: Equal
  containers:
    image: nginx
