security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-pod
spec:
  securityContext:
    runAsUser: 1000
    capabilities:
      add: ["MAC_ADMIN"]
  containers:
  - image: nginx
    name: nginx
    securityContext:
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
